react-app/src/components/Dashboard/Dashboard.css
#center__container {
    width: 80%;
    margin: 20px 0px 20px 20px;
    display: flex;
    flex-direction: column;
}

#center__container--title,
#center__container--subtitle {
    font-size: var(--h2-size);
    font-weight: 600;
    position: sticky;
}

#center__container--desc {
    justify-self: flex-end;
    align-self: flex-end;
    margin: 0 10px 3px;
    font-size: 0.9em;
    font-style: italic;
    font-weight: var(--weight-xlight);
}

#center__container--topbar {
    display: flex;
    align-items: flex-end;
    gap: 7px;
}

#center__container--main-content {
    position: relative;
    height: 100%;
    margin-top: 8px;
    overflow-y: auto;
    scrollbar-color: var(--background-color) #ffffff00;
}

#center__card--container {
    position: relative;
    height: 100%;
    overflow-y: auto;
    scrollbar-color: var(--background-color) #ffffff00;
}

.dashboard__icon {
    width: 31px;
    height: 31px;
    min-width: 31px;
    min-height: 31px;
    margin: 2px 0 0;
    font-size: 0.8em;
}

.dashboard__icon--img {
    width: 31px;
    height: 31px;
    min-width: 31px;
    min-height: 31px;
}

.dashboardhome--readinglist {
    width: 100% !important;
    margin-right: 5px !important;
    margin-bottom: 5px !important;
}

#center__container--title {
    display: none;
}

/* media queries */
@media only screen and (max-width: 992px) {
    #center__container,
    .dashboardhome--readinglist {
        width: calc(100% - 20px);
        height: 100%;
        overflow-y: scroll;
        margin: 5px 10px 10px 10px;
    }

    .dashboardhome--readinglist {
        width: calc(100% - 20px) !important;
    }

    section.center__container--framed {
        width: calc(100% - 30px) !important;
        height: 100% !important;
        overflow-y: auto !important;
        margin: 2px 20px 20px 15px !important;
        padding: 0 20px;
        border-radius: 12px;
    }

    #details__container {
        display: none;
    }

    #center__container--topbar {
        gap: 10px;
        flex-wrap: wrap;
    }

    #center__container--title {
        display: block;
        text-align: center;
        font-size: var(--h3-size);
    }

    #center__container--subtitle {
        text-align: center;
        margin-bottom: 2px;
        font-size: var(--h5-size);
        font-weight: 500;
        font-style: italic;
    }

    #center__container--desc {
        width: 100%;
        margin: -10px 40px 1px;
    }

    .hide__subtitle {
        display: none;
    }
}

@media only screen and (max-width: 672px) {
    #center__container,
    .dashboardhome--readinglist {
        margin: 0px 10px 10px 10px;
    }

    #center__container--topbar {
        display: block;
    }

    #center__container--title {
        font-size: var(--h4-size);
    }

    #center__container--subtitle {
        text-align: center;
        margin: 0;
        font-size: 1em;
    }

    .dashboard__icon {
        display: none;
    }

    .dash__card--subtitle {
        font-size: var(--h5-size);
    }

    #center__container--desc {
        width: 100%;
        margin: 0;
        padding: 0;
        text-align: center;
        font-weight: 400;
    }
}

